<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/login_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sevenzero_dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/skip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_margin="@dimen/ten_dp"
                android:text="Skip"
                android:textColor="@color/whiteColor"
                android:textSize="20sp"
                android:onClick="onSkipClicked"/>


            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/onetwozero_dp"
                android:layout_height="@dimen/onetwozero_dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/threetwo_dp"
                android:src="@drawable/login_logo" />


            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginTop="@dimen/onefive_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:padding="@dimen/ten_dp"
                android:text="@string/welcome"
                android:maxLines="1"
                android:textColor="@color/whiteColor"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/threetwo_dp" />

            <TextView
                android:id="@+id/tv_welcome_pText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:lineSpacingExtra="@dimen/twodotfive_dp"
                android:gravity="center"
                android:text="@string/welcome_p1"
                android:textColor="@color/whiteColor"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome_pText"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:text="@string/signin"
                android:layout_marginTop="@dimen/threetwo_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:onClick="onLoginClicked"
                android:background="@drawable/background_white"
                android:backgroundTint="@color/logoColor"
                android:padding="@dimen/ten_dp"
                android:textColor="@color/blackColor"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/signUpButtonText"
                android:id="@+id/btn_signup_main"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="20sp"
                android:onClick="onSignupClicked"
                android:layout_height="@dimen/fivezero_dp"
                android:layout_below="@+id/btn_login_main"
                android:layout_marginTop="@dimen/threetwo_dp"
                android:layout_marginLeft="@dimen/threetwo_dp"
                android:layout_marginStart="@dimen/threetwo_dp"
                android:layout_marginRight="@dimen/threetwo_dp"
                android:layout_marginEnd="@dimen/threetwo_dp"
                android:background="@drawable/background_bordered_white" />
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>